# matrix-appservice-rs

./: Cargo.toml  LICENSE  README.md
src/: appservice.rs  convert.rs  lib.rs  mappingdict.rs  matrix.rs  request.rs  server.rs  util.rs
