[package]
name = "matrix-appservice-rs"
description = "A library to aid in creating Matrix appservices."
version = "0.1.0"
license = "MIT"
repository = "https://github.com/lieuwex/matrix-appservice-rs/"
authors = ["Lieuwe Rooijakkers <lieuwerooijakkers@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ruma = { version = "0.1.0", features = [ "client-api", "appservice-api-s" ] }
ruma-client = { version = "0.5.0", features = [ "client-api" ] }

serde = "1"
serde_json = "1"
serde_yaml = "0.8"

hyper = { version = "0.14", features = ["server", "http1", "tcp"] }
bytes = "1"

rand = "0.8"
