[package]
name = "matrix-appservice-rs"
description = "A library to aid in creating Matrix appservices."
version = "0.3.0"
license = "MIT"
repository = "https://github.com/lieuwex/matrix-appservice-rs/"
authors = ["Lieuwe Rooijakkers <lieuwerooijakkers@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
convert = [ "html_parser", "regex", "pcre2" ]
serve = [ "hyper/server", "hyper/http1", "hyper/tcp", "bytes" ]

[dependencies]
ruma = { version = "0.1.0", features = [ "appservice-api-s" ] }
ruma-client = { version = "0.5.0" }

serde = "1"
serde_json = "1.0"

hyper = "0.14"
bytes = { version = "1", optional = true }

rand = { version = "0.8", optional = true }

#html_parser = { version = "0.4.2", optional = true }
#html_parser = { path = "../html-parser/", optional = true }
html_parser = { git = "https://github.com/lieuwex/html-parser", rev = "2be8d7ab4b7530cc861a4641a1b231c37876b540", optional = true }
regex = { version = "1", optional = true }
pcre2 = { version = "0.2.3", optional = true }
